Changelog
=========


1.12.0 (unreleased)
-------------------

- Make fixtures reusable by calling ``pytest_plugins = 'batou.fixtures'``
  in code depending on them instead of importing from conftest.py which is not
  suggested by pytest.


1.11.0 (2019-04-23)
-------------------

- Support IPv6-only addresses in `batou.utils.Address`


1.10.1 (2019-01-31)
-------------------

- Download virtualenv directly from github instead of using `pip download`. Using `pip download` makes no sense anymore, as does not only download anymore. (Thanks wosc)

1.10.0 (2018-11-28)
-------------------

- Add support for deploying via 'test kitchen' (http://kitchen.ci/)

- Fixed deploying into "own" user (no service user defined in environment) when remote and local user names are different (#106809, wosc).

- Use Python's built-in `-m venv` to create virtualenvs for Python >=3.3 (#107117).


1.9.0 (2018-10-26)
------------------

- Force clone of git repositories when the remote url changes (#106661).

- Implement basic sorting for Address-objects allowing to sort list of addresses (#100499)


1.8.0 (2018-08-16)
------------------

- Show stdout of rsync command at verification step of SyncDirectory when
  running in debug mode.
- Add VirtualEnv3.6 to support Python3.6


1.7.5 (2018-04-05)
------------------

- Fix compatability to `pip>=10.0` by using the ``download`` command instead of
  ``install --download``.


1.7.4 (2018-04-03)
------------------

- Fix compatability to `pip>=10.0` by no longer forcing eggs instead of wheels.


1.7.3 (2018-03-19)
------------------

- Fix git-bundle deploy when there are no changes to the deployment repository
  (#100645)


1.7.2 (2018-03-01)
------------------

- Fix `batou.lib.file.Purge` to be able to delete files again.


1.7.1 (2018-01-29)
------------------

- Fix git deployment repository handling.


1.7.0 (2018-01-29)
------------------

- `git.Clone` uses `git reset` instead of merge/checkout to get the defined
   state.
