@@ -1,0 +1,7 @@
+[environment]
+connect_method = local
+
+[hosts]
+localhost = hello1, hello2
+other = hello3
+this = hello2, hello3
