@@ -246,6 +246,15 @@ data-alias = baz
     assert 'baz' == e.hosts['foo'].data['alias']
 
 
+def test_components_for_host_can_be_retrieved_from_environment(sample_service):
+    e = Environment('test-overlapping-components')
+    e.load()
+    assert ['hello1', 'hello2'] == e.components_for(host='localhost')
+    assert ['hello3'] == e.components_for(host='other')
+    assert ['hello2', 'hello3'] == e.components_for(host='this')
+    assert [] == e.components_for(host='foobar')
+
+
 @mock.patch('batou.remote_core.Output.line')
 def test_log_in_component_configure_is_put_out(
         output, sample_service):
